Improve robustness of the `getenforce` check